refactor : Integer 생성 시 new 연산자 사용부분을 valueOf 메소드 호출로 변경